# lingoa

./: .gitignore  README.md  index.html  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: version-bump.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.portable.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  git.rs  github.rs  lib.rs  main.rs  parsers.rs  util.rs
src/components/: AppModal.tsx  ErrorBoundary.tsx  Icons.tsx
src/components/auth/: TokenSetup.tsx
src/components/editor/: ProposalsSection.tsx  ShortcutBar.tsx  SourceSection.tsx  TranslationEditor.tsx  TranslationInput.tsx
src/components/layout/: AppShell.tsx
src/components/review/: AnnotationPanel.tsx  RowDetailView.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: KeyItem.tsx  KeyList.tsx
src/constants/: keyState.ts
src/hooks/: useAutoResize.ts  useResizableSidebar.ts  useUpdateCheck.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json
src/lib/: discovery.ts  git.ts  github.ts  tauri.ts
src/lib/parsers/: json.ts  yaml.ts
src/stores/: appStore.ts  authStore.ts  editorStore.ts  prStore.ts  repoStore.ts  settingsStore.ts
src/types/: index.ts
src/views/: EditorView.tsx  HomeView.tsx  ReviewView.tsx
