[package]
name = "lingoa"
version = "0.1.0"
description = "Lingoa — GitHub i18n Translation Tool"
authors = []
edition = "2021"

[lib]
name = "lingoa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
keyring = "3"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
