[package]
name = "lingoa"
version = "0.1.0"
description = "Lingoa — GitHub i18n Translation Tool"
authors = []
edition = "2021"

[features]
portable = []

[lib]
name = "lingoa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = { version = "3", features = ["windows-native"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros", "sync"] }
serde_yml = "0.0.12"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
regex = "1"
git2 = { version = "0.19", default-features = false }
open = "5.3.3"
smallvec = { version = "1", features = ["union"] }
